sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:11: error: type mismatch;
 found   : Boolean(false)
 required: Int
	inverse=false
                ^AlgBubbleSort1:17: error: type mismatch;
 found   : Boolean(true)
 required: Int
				inverse=true
                                        ^AlgBubbleSort1:22: error: type mismatch;
 found   : Int
 required: Boolean
} while(inverse)
        ^